4. Changed File menu to Tools menu.
5. Added error catch and report to zip.
6. Improved directory dialogue for zip.
7. Fixed help file and image.

18 Sept
Added reference counting to fonts that are shared/common among pogs: When a pog is uninstalled *and* another installed pog has the same font(s), those fonts are left installed.

19 Sept
1. A long day of tidying-up and abstracting the unicode/str stuff.
2. Gone a long way to a standard error approach. Still have some loose ends.

21 Sept
1. Adding icons for the various font items that are bad in some way.
2. Tweaking colours and effects to look better
3. Trying to get the widths of fitems to fit the middle panel. Kind of working, but not on first run.

22 Sept
1. Got a workaround for fitem widths going.
2. Improved the rendering of fitems under various conditions.
3. Removed fatfont.

22 Sept
1. Changed button on Check fonts form to 'Close' -- makes more sense now.

24 Sept
1. Major update of help file and graphics.
2. Trying to fancy-up the info label in the font-view. So far no luck.
3. Got the label going! Made a custom control.

25 Sept
1. Improved the drawing of fitmaps and gradients. Still have some precalcing of colours to do.
2. Tweaked the images and icons.

26 Sept
1. Added a sunken border to font view -- better visual containment I think.

27 Sept
More gui polishing done.
Strings changed -- PO files will be broken :(

28 Sept
1. Seems PO files are quite robust -- the strings are marked as 'fuzzy' and should still translate fairly well.
2. Today I will make a 'release' branch on the SVN and get the tarball for 0.4.2 going.

28 Sept : Feedback from Kartik
1. Removed the Version tag from .desktop file -- it's not required.
2. Removed the .png from the icon key in .desktop file -- it's not wanted.
3. Some confusion as to whether fonty will run 100% on Python 2.5 I developed this year on 2.6
4. Version bumped to 0.4.2.1

