@@ -154,4 +154,7 @@ Strings changed -- PO files will be broken :(
 3. Some confusion as to whether fonty will run 100% on Python 2.5 I developed this year on 2.6
 4. Version bumped to 0.4.2.1
 
+29 Sept
+1. Working on a way to scan the font images and remove that leading blank space on certain fonts. Done, and included an override in settings dialog.
+
 
